// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterColumns should filter by filter callback
    should not remove foreign columns 1`] = `
Array [
  Column {
    "_foreignTableName": undefined,
    "enums": undefined,
    "foreignModelName": undefined,
    "name": "FirstName",
    "type": "string",
  },
  Column {
    "_foreignTableName": "users",
    "enums": undefined,
    "foreignModelName": "Users",
    "name": "UserID",
    "type": "number",
  },
  Column {
    "_foreignTableName": undefined,
    "enums": undefined,
    "foreignModelName": undefined,
    "name": "number of name",
    "type": "number",
  },
]
`;

exports[`getNewColumnBranch should return new ColumnBranch with defined columnName and type 1`] = `
Object {
  "_foreignTableName": undefined,
  "_lastColumn": Object {
    "_foreignTableName": undefined,
    "_lastColumn": undefined,
    "columnName": "username",
    "foreignColumn": undefined,
    "foreignModelName": undefined,
    "foreignTableName": undefined,
    "modelName": "",
    "tableName": "Users",
    "type": "number",
  },
  "columnName": "",
  "foreignColumn": Object {
    "_foreignTableName": undefined,
    "_lastColumn": undefined,
    "columnName": "",
    "foreignColumn": Object {
      "_foreignTableName": undefined,
      "_lastColumn": undefined,
      "columnName": "username",
      "foreignColumn": undefined,
      "foreignModelName": undefined,
      "foreignTableName": undefined,
      "modelName": "",
      "tableName": "Users",
      "type": "number",
    },
    "foreignModelName": undefined,
    "foreignTableName": undefined,
    "modelName": "",
    "tableName": "",
    "type": undefined,
  },
  "foreignModelName": undefined,
  "foreignTableName": undefined,
  "modelName": "",
  "tableName": "",
  "type": undefined,
}
`;

exports[`getRootTableBranch should return instance of ColumnBranch with specified tableName 1`] = `
Object {
  "_foreignTableName": undefined,
  "_lastColumn": undefined,
  "columnName": "",
  "foreignColumn": undefined,
  "foreignModelName": undefined,
  "foreignTableName": undefined,
  "modelName": "Users",
  "tableName": "Users",
  "type": undefined,
}
`;

exports[`sortInOrderForeignColumnsBelow should sort in order foreign columns in the bottom 1`] = `
Array [
  Column {
    "_foreignTableName": undefined,
    "enums": undefined,
    "foreignModelName": undefined,
    "name": "ID",
    "type": "primary",
  },
  Column {
    "_foreignTableName": undefined,
    "enums": undefined,
    "foreignModelName": undefined,
    "name": "name",
    "type": undefined,
  },
  Column {
    "_foreignTableName": "products",
    "enums": undefined,
    "foreignModelName": "Products",
    "name": "ProductID",
    "type": undefined,
  },
  Column {
    "_foreignTableName": "users",
    "enums": undefined,
    "foreignModelName": "Users",
    "name": "AddedBy",
    "type": undefined,
  },
]
`;
